# sugar

./: Cargo.toml  README.md
.cargo-husky/hooks/: pre-commit
script/: sugar-cli-test.sh  sugar-install.sh
src/: candy_machine.rs  constants.rs  main.rs  parse.rs  program_errors.rs  setup.rs  utils.rs
src/airdrop/: process.rs
src/bundlr/: process.rs
src/cli/: mod.rs
src/config/: data.rs  mod.rs
src/create_config/: process.rs
src/deploy/: collection.rs  errors.rs  initialize.rs  process.rs
src/freeze/: enable.rs  mod.rs  thaw.rs  unfreeze_funds.rs
src/guard/: show.rs  withdraw.rs
src/mint/: process.rs
src/reveal/: process.rs
src/show/: process.rs
src/sign/: process.rs
src/update/: process.rs
src/upload/: assets.rs
src/upload/methods/: bundlr.rs  shdw.rs
src/validate/: process.rs
src/verify/: errors.rs  process.rs
src/withdraw/: process.rs
tests/: config.json.backup  sugar-airdrop-test.sh
