[package]
name = "miraplex-sugar-cli"
version = "2.1.1"
edition = "2021"
description = "Command line tool for creating and managing Miraplex Candy Machines. Derived/Forked from Metaplex."
license = "Apache-2.0"
repository = "https://github.com/miraland-labs/sugar"
documentation = "https://docs.metaplex.com/sugar/introduction"

[[bin]]
name = "sugar"
path = "src/main.rs"

[dependencies]
anchor-client = { package = "solarti-anchor-client", version = "0.26.0" }
anchor-lang = { package = "solarti-anchor-lang", version = "0.26.0" }
anyhow = "1.0.58"
async-trait = "0.1.57"
borsh = "0.9.3"
bs58 = "0.4.0"
bundlr-sdk = { version = "0.3.0", default-features = false, features = ["solana"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
clap = { version = "3.2.8", features = ["derive", "cargo"] }
console = "0.15.0"
ctrlc = "3.2.2"
data-encoding = "2.3.2"
dateparser = "0.1.6"
dialoguer = "0.10.1"
dirs = "4.0.0"
futures = "0.3.21"
glob = "0.3.0"
hex = "0.4.3"
indexmap = { version = "1.9.1", features = ["serde"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
ini = "1.3.0"
lazy_static = "1.4.0"
mpl-candy-guard = { package = "miraplex-candy-guard", version = "1.0.1", features = ["no-entrypoint"] }
mpl-candy-machine-core = { package = "miraplex-candy-machine-core", version = "1.0.1", features = ["no-entrypoint"] }
mpl-token-metadata = { package = "miraplex-token-metadata", version = "1.11.1", features = ["no-entrypoint"] }
num_cpus = "1.13.1"
phf = { version = "0.10", features = ["macros"] }
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.5.6"
retry = "1.3.0"
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
ring = "0.16.20"
rust-s3 = "0.31.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.24"
sha2 = "0.10.2"
shellexpand = "2.1.0"
miraland-account-decoder = "1.14.17-rc5"
miraland-client = "1.14.17-rc5"
miraland-logger = "1.14.17-rc5"
miraland-program = "1.14.17-rc5"
miraland-transaction-status = "1.14.17-rc5"
spl-associated-token-account = { package = "solarti-associated-token-account", version = "1.1.6", features = ["no-entrypoint"] }
spl-token = { package = "solarti-token", version = "3.5.4", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tokio = "1.14.1"
tracing = { version = "0.1.35", features = ["log"] }
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
url = "2.2.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "user-hooks"]

[lib]
crate-type = ["lib"]
name = "sugar_cli"
